<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        
        <LinearLayout
        android:id="@+id/linearLayoutH1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".25"
        android:orientation="vertical"
        android:weightSum="1" >
        	<EditText
            	android:id="@+id/answer"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:editable="false"
            	android:layout_weight=".50"/>
        	<EditText
            	android:id="@+id/enter"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:editable="false"
            	android:layout_weight=".50"/>
    	</LinearLayout>
    	
    	<LinearLayout
       	android:id="@+id/linearLayoutH2"
      	android:layout_width="fill_parent"
       	android:layout_height="100dp"  
       	android:orientation="horizontal"
       	android:weightSum="1.0" >

    		<Button
    		    android:id="@+id/buttonClr"
    		    android:layout_width="0dp"
    		    android:layout_height="fill_parent"
    		    android:layout_marginBottom="10dp"
    		    android:layout_marginRight="20dp"
    		    android:layout_marginTop="10dp"
    		    android:layout_weight="0.5"
    		    android:background="@color/Black"
    		    android:text="@string/clear"
    		    android:textColor="@color/White"
    		    android:textSize="20sp" />

    		<Button
    		    android:id="@+id/buttonBack"
    		    android:layout_width="0dp"
    		    android:layout_height="fill_parent"
    		    android:layout_marginBottom="10dp"
    		    android:layout_marginLeft="20dp"
    		    android:layout_marginTop="10dp"
    		    android:layout_weight="0.5"
    		    android:background="@color/Black"
    		    android:text="@string/back"
    		    android:textColor="@color/White"
    		    android:textSize="20sp" />

  		</LinearLayout>
  		
    	<LinearLayout
       	android:id="@+id/linearLayoutH3"
       	android:layout_width="fill_parent"
       	android:layout_height="50dp"
       	android:layout_weight=".25"
       	android:orientation="horizontal"
       	android:weightSum="1.0" >
 
       		<Button
       		    android:id="@+id/button1"
       		    android:layout_width="50dp"
       		    android:layout_height="fill_parent"
       		    android:layout_marginBottom="5dp"
       		    android:layout_marginRight="5dp"
       		    android:layout_weight="0.25"
       		    android:background="@color/Gray"
       		    android:text="@string/one"
       		    android:textColor="@color/White"
       		    android:textSize="40sp" />

       		<Button
       		    android:id="@+id/button2"
       		    android:layout_width="50dp"
       		    android:layout_height="fill_parent"
       		    android:layout_marginBottom="5dp"
       		    android:layout_marginRight="5dp"
       		    android:layout_weight=".25"
       		    android:background="@color/Gray"
       		    android:text="@string/two"
       		    android:textColor="@color/White"
       		    android:textSize="40sp" />

       		<Button
       		    android:id="@+id/button3"
       		    android:layout_width="50dp"
       		    android:layout_height="fill_parent"
       		    android:layout_marginBottom="5dp"
       		    android:layout_marginRight="5dp"
       		    android:layout_weight=".25"
       		    android:background="@color/Gray"
       		    android:text="@string/three"
       		    android:textColor="@color/White"
       		    android:textSize="40sp" />

       		<Button
       		    android:id="@+id/buttonAdd"
       		    android:layout_width="50dp"
       		    android:layout_height="fill_parent"
       		    android:layout_marginBottom="2dp"
       		    android:layout_weight=".25"
       		    android:background="@color/Gray"
       		    android:text="@string/addition"
       		    android:textSize="40sp" />
   		</LinearLayout>
   		
    	<LinearLayout
       	android:id="@+id/linearLayoutH4"
       	android:layout_width="fill_parent"
       	android:layout_height="50dp"
       	android:layout_weight=".25"
       	android:orientation="horizontal"
       	android:weightSum="1.0" >
 
       		<Button
       		    android:id="@+id/button4"
       		    android:layout_width="50dp"
       		    android:layout_height="fill_parent"
       		    android:layout_marginBottom="5dp"
       		    android:layout_marginRight="5dp"
       		    android:layout_weight="0.25"
       		    android:background="@color/Gray"
       		    android:text="@string/four"
       		    android:textColor="@color/White"
       		    android:textSize="40sp" />

       		<Button
       		    android:id="@+id/button5"
       		    android:layout_width="50dp"
       		    android:layout_height="fill_parent"
       		    android:layout_marginBottom="5dp"
       		    android:layout_marginRight="5dp"
       		    android:layout_weight=".25"
       		    android:background="@color/Gray"
       		    android:text="@string/five"
       		    android:textColor="@color/White"
       		    android:textSize="40sp" />

       		<Button
       		    android:id="@+id/button6"
       		    android:layout_width="50dp"
       		    android:layout_height="fill_parent"
       		    android:layout_marginBottom="5dp"
       		    android:layout_marginRight="5dp"
       		    android:layout_weight=".25"
       		    android:background="@color/Gray"
       		    android:text="@string/six"
       		    android:textColor="@color/White"
       		    android:textSize="40sp" />

       		<Button
       		    android:id="@+id/buttonSub"
       		    android:layout_width="50dp"
       		    android:layout_height="fill_parent"
       		    android:layout_marginBottom="2dp"
       		    android:layout_weight=".25"
       		    android:background="@color/Gray"
       		    android:text="@string/subtraction"
       		    android:textSize="40sp" />
   		</LinearLayout>
   		
    	<LinearLayout
    	    android:id="@+id/linearLayoutH5"
    	    android:layout_width="fill_parent"
    	    android:layout_height="50dp"
    	    android:layout_weight=".25"
    	    android:orientation="horizontal"
    	    android:weightSum="1.0" >
 
       		<Button
       		    android:id="@+id/button7"
       		    android:layout_width="50dp"
       		    android:layout_height="fill_parent"
       		    android:layout_marginBottom="5dp"
       		    android:layout_marginRight="5dp"
       		    android:layout_weight="0.25"
       		    android:background="@color/Gray"
       		    android:text="@string/seven"
       		    android:textColor="@color/White"
       		    android:textSize="40sp" />

       		<Button
       		    android:id="@+id/button8"
       		    android:layout_width="50dp"
       		    android:layout_height="fill_parent"
       		    android:layout_marginBottom="5dp"
       		    android:layout_marginRight="5dp"
       		    android:layout_weight=".25"
       		    android:background="@color/Gray"
       		    android:text="@string/eight"
       		    android:textColor="@color/White"
       		    android:textSize="40sp" />

       		<Button
       		    android:id="@+id/button9"
       		    android:layout_width="50dp"
       		    android:layout_height="fill_parent"
       		    android:layout_marginBottom="5dp"
       		    android:layout_marginRight="5dp"
       		    android:layout_weight=".25"
       		    android:background="@color/Gray"
       		    android:text="@string/nine"
       		    android:textColor="@color/White"
       		    android:textSize="40sp" />

       		<Button
       		    android:id="@+id/buttonMultiply"
       		    android:layout_width="50dp"
       		    android:layout_height="fill_parent"
       		    android:layout_marginBottom="2dp"
       		    android:layout_weight=".25"
       		    android:background="@color/Gray"
       		    android:text="@string/multiplication"
       		    android:textSize="40sp" />

   		</LinearLayout>
   		
    	<LinearLayout
       	android:id="@+id/linearLayoutH6"
       	android:layout_width="fill_parent"
       	android:layout_height="50dp"
       	android:layout_weight=".25"
       	android:orientation="horizontal"
       	android:weightSum="1.0" >
 
       		<Button
       		    android:id="@+id/button0"
       		    android:layout_width="50dp"
       		    android:layout_height="fill_parent"
       		    android:layout_marginBottom="5dp"
       		    android:layout_marginRight="5dp"
       		    android:layout_weight="0.25"
       		    android:background="@color/Gray"
       		    android:text="@string/zero"
       		    android:textColor="@color/White"
       		    android:textSize="40sp" />

       		<Button
       		    android:id="@+id/buttonDecimal"
       		    android:layout_width="50dp"
       		    android:layout_height="fill_parent"
       		    android:layout_marginBottom="5dp"
       		    android:layout_marginRight="5dp"
       		    android:layout_weight=".25"
       		    android:background="@color/Gray"
       		    android:text="@string/decimal"
       		    android:textColor="@color/Black"
       		    android:textSize="40sp" />

       		<Button
       		    android:id="@+id/buttonEqual"
       		    android:layout_width="50dp"
       		    android:layout_height="fill_parent"
       		    android:layout_marginBottom="5dp"
       		    android:layout_marginRight="5dp"
       		    android:layout_weight=".25"
       		    android:background="@color/Gray"
       		    android:text="@string/equal"
       		    android:textColor="@color/Red"
       		    android:textSize="40sp" />

       		<Button
       		    android:id="@+id/buttonDivide"
       		    android:layout_width="50dp"
       		    android:layout_height="fill_parent"
       		    android:layout_marginBottom="2dp"
       		    android:layout_weight=".25"
       		    android:background="@color/Gray"
       		    android:text="@string/division"
       		    android:textSize="40sp" />
   		</LinearLayout>
  		
    </LinearLayout>
    
</RelativeLayout>